# bazel-textual-experiments

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  requirements.in  requirements_darwin_lock.txt  requirements_linux_lock.txt  requirements_windows_lock.txt
.github/workflows/: build-and-test.yml
package/: macos.sh
src/: .example.tcss.swp  BUILD  api.proto  api_example.pb.txt  cpp_example.cc  example.py  example.tcss  example_no_ui.py  sh_example.sh
src/test/: BUILD  test_numpy.py
