bazel_dep(name = "rules_python", version = "0.35.0")

PYTHON_VERSION = "3.12.4"

# We next initialize the python toolchain using the extension.
# You can set different Python versions in this block.
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = PYTHON_VERSION,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    experimental_target_platforms = [
        "linux_*",
        "osx_*",
        "windows_*",
    ],
    hub_name = "pip",
    python_version = PYTHON_VERSION,

    requirements_by_platform = {
        "//:requirements_darwin_lock.txt": "osx_*",
        "//:requirements_linux_lock.txt": "linux_*",
        "//:requirements_windows_lock.txt": "windows_*",
    },
    experimental_requirement_cycles = {
        "textual": [
            "textual",
            "rich",
            "markdown-it-py",
            "mdit-py-plugins",
        ]
    }
)

use_repo(pip, "pip")
